--- a/index.html
+++ b/index.html
@@ -98,11 +98,50 @@
               </div>
             </div>
             <div class="sorting_menu">
-                <span> Deal of the Day</span>
-                <span> Hot Deals</span>
-                <span> Best Sellers</span>
-                <span> New Arrivals</span>
+              <span> Deal of the Day</span>
+              <span> Hot Deals</span>
+              <span> Best Sellers</span>
+              <span> New Arrivals</span>
             </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="home_page">
+      <div class="header_frame">
+        <div class="container">
+          <div class="header_left">
+            <div class="header_content">
+              <div>Special Offer</div>
+              <span>Immersive Entertainment </span>
+              <p>Discover our new items. Up to 25% Off !</p>
+              <a href="">Shop Now</a>
+              <img src="public/images/icons/header_img.svg" alt="">
+            </div>
+          </div>
+          <div class="header_right">
+              <div class="header_box">
+                <div class="box_left">
+                    <span>Starting from $899</span>
+                    <p>Health Care Monitor</p>
+                    <a href="">Shop Now</a>
+                    <div class="hover_border"></div>
+                </div>
+                <div class="box_right">
+                  <img src="public/images/icons/smart_watch.svg">
+                </div>
+              </div>
+              <div class="header_box">
+                <div class="box_left">
+                    <span>Starting from $899</span>
+                    <p>Health Care Monitor</p>
+                    <a href="">Shop Now</a>
+                    <div class="hover_border"></div>
+                </div>
+                <div class="box_right">
+                  <img src="public/images/icons/smart_watch.svg">
+                </div>
+              </div>
           </div>
         </div>
       </div>
