--- a/index.html
+++ b/index.html
@@ -116,32 +116,64 @@
               <span>Immersive Entertainment </span>
               <p>Discover our new items. Up to 25% Off !</p>
               <a href="">Shop Now</a>
-              <img src="public/images/icons/header_img.svg" alt="">
+              <img src="public/images/icons/header_img.svg" alt="" />
             </div>
           </div>
           <div class="header_right">
-              <div class="header_box">
-                <div class="box_left">
-                    <span>Starting from $899</span>
-                    <p>Health Care Monitor</p>
-                    <a href="">Shop Now</a>
-                    <div class="hover_border"></div>
-                </div>
-                <div class="box_right">
-                  <img src="public/images/icons/smart_watch.svg">
-                </div>
+            <div class="header_box">
+              <div class="box_left">
+                <span>Starting from $899</span>
+                <p>Health Care Monitor</p>
+                <a href="">Shop Now</a>
+                <div class="hover_border"></div>
               </div>
-              <div class="header_box">
-                <div class="box_left">
-                    <span>Starting from $899</span>
-                    <p>Health Care Monitor</p>
-                    <a href="">Shop Now</a>
-                    <div class="hover_border"></div>
-                </div>
-                <div class="box_right">
-                  <img src="public/images/icons/smart_watch.svg">
-                </div>
+              <div class="box_right">
+                <img src="public/images/icons/smart_watch.svg" />
               </div>
+            </div>
+            <div class="header_box">
+              <div class="box_left">
+                <span>Starting from $899</span>
+                <p>Health Care Monitor</p>
+                <a href="">Shop Now</a>
+                <div class="hover_border"></div>
+              </div>
+              <div class="box_right">
+                <img src="public/images/icons/smart_watch.svg" />
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="service_frame">
+        <div class="container">
+          <div class="service_box">
+            <img src="public/images/icons/track.svg" alt="" />
+            <div class="service_content">
+              <span>Free Shipping</span>
+              <p>Free Shipping for orders over $200</p>
+            </div>
+          </div>
+          <div class="service_box">
+            <img src="public/images/icons/money_guarantee.svg" alt="" />
+            <div class="service_content">
+              <span>Money Guarantee</span>
+              <p>Within 30days for an exchange</p>
+            </div>
+          </div>
+          <div class="service_box">
+            <img src="public/images/icons/headphones.svg" alt="" />
+            <div class="service_content">
+              <span>Online Support</span>
+              <p>24 hours a day, 7 days a week</p>
+            </div>
+          </div>
+          <div class="service_box">
+            <img src="public/images/icons/credit-card.svg" alt="" />
+            <div class="service_content">
+              <span>Flexible Payment</span>
+              <p>Pay with Multiple Credit Cards</p>
+            </div>
           </div>
         </div>
       </div>
