feat: completed adv section view

--- a/index.html
+++ b/index.html
@@ -373,9 +373,45 @@
             </div>
 
         </div>
-        <div class="product_penigation_box">
-        </div>
       </div>
+       <div class="pegination_box">
+          <div class="pegination_main">
+            <img src="public/images/icons/arrow-prev_next.svg">
+            <div class="pegination_dot">
+              <div class="dot">
+                <div></div>
+              </div>
+              <div class="dot active">
+                <div></div>
+              </div>
+              <div class="dot">
+                <div></div>
+              </div>
+              <div class="dot">
+                <div></div>
+              </div>
+              <div class="dot">
+                <div></div>
+              </div>
+              <div class="dot">
+                <div></div>
+              </div>
+              <div class="dot">
+                <div></div>
+              </div>
+              <div class="dot">
+                <div></div>
+              </div>
+            </div>
+            <img src="public/images/icons/arrow-prev_next.svg" style="transform: scaleX(-1);">
+          </div>
+       </div>  
     </div>
+
+    <div class="adv_frame">
+        Members get free shipping * wwith no order minimum! *Restriction apply. Try free 30-days trial
+    </div>
+
+    
   </body>
 </html>
