--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
           <a href="">
             <img src="public/images/icons/logo.png" alt="" />
           </a>
-
           <div class="nav_search_frame">
             <div class="search_box">
               <div class="category_list">
@@ -38,34 +37,26 @@
           <div class="nav_top_menu">
             <a href="">
               <div class="top_menu_box">
-                <div class="box_icon_box">
-                  <img src="public/images/icons/heart.svg" />
-                </div>
+                <img src="public/images/icons/heart.svg" />
                 <div class="box_info_box">
                   <span>Wishlist</span>
                   <strong>My Items</strong>
                 </div>
               </div>
             </a>
-
             <a href="">
               <div class="top_menu_box">
-                <div class="box_icon_box">
-                  <img src="public/images/icons/profile.svg" />
-                </div>
+                <img src="public/images/icons/profile.svg" />
                 <div class="box_info_box">
                   <span>Sign In</span>
                   <strong>Account</strong>
                 </div>
               </div>
             </a>
-
             <a href="">
               <div class="top_menu_box">
-                <div class="box_icon_box">
-                  <div class="basket_count">2</div>
-                  <img src="public/images/icons/shopping-cart.svg" />
-                </div>
+                <div class="basket_count">2</div>
+                <img src="public/images/icons/shopping-cart.svg" />
                 <div class="box_info_box">
                   <span>$200.99</span>
                   <strong>Total</strong>
@@ -81,27 +72,17 @@
               <span>Browse Categories</span>
             </div>
             <div class="navbar_route_menu">
-              <div class="router_menu">
-                <a href="" class="active">Home</a>
-              </div>
-              <div class="router_menu">
-                <a href="">Shop</a>
-              </div>
-              <div class="router_menu">
-                <a href="">Orders</a>
-              </div>
-              <div class="router_menu">
-                <a href="">About</a>
-              </div>
-              <div class="router_menu">
-                <a href="">Contact</a>
-              </div>
+              <a href="" class="router_menu active">Home</a>
+              <a href="" class="router_menu">Shop</a>
+              <a href="" class="router_menu">Orders</a>
+              <a href="" class="router_menu">About</a>
+              <a href="" class="router_menu">Contact</a>
             </div>
             <div class="sorting_menu">
-              <span> Deal of the Day</span>
-              <span> Hot Deals</span>
-              <span> Best Sellers</span>
-              <span> New Arrivals</span>
+              <span>Deal of the Day</span>
+              <span>Hot Deals</span>
+              <span>Best Sellers</span>
+              <span>New Arrivals</span>
             </div>
           </div>
         </div>
@@ -113,7 +94,7 @@
           <div class="header_left">
             <div class="header_content">
               <div>Special Offer</div>
-              <span>Immersive Entertainment </span>
+              <span>Immersive Entertainment</span>
               <p>Discover our new items. Up to 25% Off !</p>
               <a href="">Shop Now</a>
               <img src="public/images/icons/header_img.svg" alt="" />
@@ -178,11 +159,10 @@
         </div>
       </div>
       <div class="shop_category_frame">
-
         <div class="container">
           <div class="category_top">
             <span>Shop Category</span>
-            <a href=""> View All Categories</a>
+            <a href="">View All Categories</a>
           </div>
           <div class="category_wrapper">
             <div class="category_box">
@@ -224,221 +204,197 @@
           </div>
         </div>
       </div>
-      
       <div class="selling_producs_frame">
         <div class="container">
-        <div class="category_top">
-          <span>Top Selling Producs</span>
-          <a href=""> View All </a>
-        </div>
-        <div class="product_wrapper">
-          <div class="next-prev_box">
-            <img src="public/images/icons/next.svg" alt="" />
+          <div class="category_top">
+            <span>Top Selling Products</span>
+            <a href="">View All</a>
           </div>
-          <div class="product_boxes">
-            <div class="product_box">
-              <a href="">
-                <div
-                  class="product_image_box"
-                  style="
-                    background: url('public/images/products/watch.png');
-                    background-size: cover;
-                  "
-                >
-                  <div class="hover_box">
-                    <button>Add to Cart</button>
-                  </div>
-                </div>
-              </a>
-              <div class="product_content_box">
-                <span class="product_title">Samsung</span>
-                <a href="">
-                  <p class="product_desc">Apple Watch SE (GPS) 40mm Space Grey Aluminum Case with</p>
-                </a>
-                <div class="review_box">
-                  <img src="public/images/icons/review.svg">
-                  <img src="public/images/icons/review.svg">
-                  <img src="public/images/icons/review.svg">
-                  <img src="public/images/icons/review.svg">
-                  <img src="public/images/icons/review.svg">
-                  <span>3,014 reviews</span>
-                </div>
-                <div class="price_box">
-                  <strong>$32.50</strong>
-                  <span>$45</span>
-                </div>
-              </div>
-            </div>
-            <div class="product_box">
-              <a href="">
-                <div
-                  class="product_image_box"
-                  style="
-                    background: url('public/images/products/phone.png');
-                    background-size: cover;
-                  "
-                >
-                  <div class="hover_box">
-                    <button>Add to Cart</button>
-                  </div>
-                </div>
-              </a>
-              <div class="product_content_box">
-                <span class="product_title">Apple</span>
-                <a href="">
-                  <p class="product_desc">Apple IPhone 11 64GB Smartphone Black</p>
-                </a>
-                <div class="review_box">
-                  <img src="public/images/icons/review.svg">
-                  <img src="public/images/icons/review.svg">
-                  <img src="public/images/icons/review.svg">
-                  <img src="public/images/icons/review.svg">
-                  <img src="public/images/icons/review.svg">
-                  <span>5,085 reviews</span>
-                </div>
-                <div class="price_box">
-                  <strong>$700</strong>
-                  <span>$800</span>
-                </div>
-              </div>
-            </div>
-            <div class="product_box">
-              <a href="">
-                <div
-                  class="product_image_box"
-                  style="
-                    background: url('public/images/products/iRobot.png');
-                    background-size: cover;
-                  "
-                >
-                  <div class="hover_box">
-                    <button>Add to Cart</button>
-                  </div>
-                </div>
-              </a>
-              <div class="product_content_box">
-                <span class="product_title">SONY</span>
-                <a href="">
-                  <p class="product_desc">iRobot Roomba i3+ EVO Wi-Fi Connected Self-Empty Robot</p>
-                </a>
-                <div class="review_box">
-                  <img src="public/images/icons/review.svg">
-                  <img src="public/images/icons/review.svg">
-                  <img src="public/images/icons/review.svg">
-                  <img src="public/images/icons/review.svg">
-                  <img src="public/images/icons/review.svg">
-                  <span>3,00 reviews</span>
-                </div>
-                <div class="price_box">
-                  <strong>$399.50</strong>
-                  <span>$450</span>
-                </div>
-              </div>
-            </div>
-            <div class="product_box">
-              <a href="">
-                <div
-                  class="product_image_box"
-                  style="
-                    background: url('public/images/products/dyson.png');
-                    background-size: cover;
-                  "
-                >
-                  <div class="hover_box">
-                    <button>Add to Cart</button>
-                  </div>
-                </div>
-              </a>
-              <div class="product_content_box">
-                <span class="product_title">DYSON</span>
-                <a href="">
-                  <p class="product_desc">Dyson V7 Complete Cordless Stick Vacuum - Iron/Blue</p>
-                </a>
-                <div class="review_box">
-                  <img src="public/images/icons/review.svg">
-                  <img src="public/images/icons/review.svg">
-                  <img src="public/images/icons/review.svg">
-                  <img src="public/images/icons/review.svg">
-                  <img src="public/images/icons/review.svg">
-                  <span>1,054 reviews</span>
-                </div>
-                <div class="price_box">
-                  <strong>$99</strong>
-                  <span>$120</span>
-                </div>
-              </div>
-            </div>
-            <div class="next-prev_box" style="transform: scaleX(-1);">
+          <div class="product_wrapper">
+            <div class="next-prev_box">
               <img src="public/images/icons/next.svg" alt="" />
             </div>
-
-        </div>
-      </div>
-       <div class="pegination_box">
-          <div class="pegination_main">
-            <img src="public/images/icons/arrow-prev_next.svg">
-            <div class="pegination_dot">
-              <div class="dot">
-                <div></div>
+            <div class="product_boxes">
+              <div class="product_box">
+                <a href="">
+                  <div
+                    class="product_image_box"
+                    style="
+                      background: url('public/images/products/watch.png');
+                      background-size: cover;
+                    "
+                  >
+                    <div class="hover_box">
+                      <button>Add to Cart</button>
+                    </div>
+                  </div>
+                </a>
+                <div class="product_content_box">
+                  <span class="product_title">Samsung</span>
+                  <a href="">
+                    <p class="product_desc">
+                      Apple Watch SE (GPS) 40mm Space Grey Aluminum Case with
+                    </p>
+                  </a>
+                  <div class="review_box">
+                    <img src="public/images/icons/review.svg" />
+                    <img src="public/images/icons/review.svg" />
+                    <img src="public/images/icons/review.svg" />
+                    <img src="public/images/icons/review.svg" />
+                    <img src="public/images/icons/review.svg" />
+                    <span>3,014 reviews</span>
+                  </div>
+                  <div class="price_box">
+                    <strong>$32.50</strong>
+                    <span>$45</span>
+                  </div>
+                </div>
               </div>
-              <div class="dot active">
-                <div></div>
+              <div class="product_box">
+                <a href="">
+                  <div
+                    class="product_image_box"
+                    style="
+                      background: url('public/images/products/phone.png');
+                      background-size: cover;
+                    "
+                  >
+                    <div class="hover_box">
+                      <button>Add to Cart</button>
+                    </div>
+                  </div>
+                </a>
+                <div class="product_content_box">
+                  <span class="product_title">Apple</span>
+                  <a href="">
+                    <p class="product_desc">
+                      Apple IPhone 11 64GB Smartphone Black
+                    </p>
+                  </a>
+                  <div class="review_box">
+                    <img src="public/images/icons/review.svg" />
+                    <img src="public/images/icons/review.svg" />
+                    <img src="public/images/icons/review.svg" />
+                    <img src="public/images/icons/review.svg" />
+                    <img src="public/images/icons/review.svg" />
+                    <span>5,085 reviews</span>
+                  </div>
+                  <div class="price_box">
+                    <strong>$700</strong>
+                    <span>$800</span>
+                  </div>
+                </div>
               </div>
-              <div class="dot">
-                <div></div>
+              <div class="product_box">
+                <a href="">
+                  <div
+                    class="product_image_box"
+                    style="
+                      background: url('public/images/products/iRobot.png');
+                      background-size: cover;
+                    "
+                  >
+                    <div class="hover_box">
+                      <button>Add to Cart</button>
+                    </div>
+                  </div>
+                </a>
+                <div class="product_content_box">
+                  <span class="product_title">SONY</span>
+                  <a href="">
+                    <p class="product_desc">
+                      iRobot Roomba i3+ EVO Wi-Fi Connected Self-Empty Robot
+                    </p>
+                  </a>
+                  <div class="review_box">
+                    <img src="public/images/icons/review.svg" />
+                    <img src="public/images/icons/review.svg" />
+                    <img src="public/images/icons/review.svg" />
+                    <img src="public/images/icons/review.svg" />
+                    <img src="public/images/icons/review.svg" />
+                    <span>3,00 reviews</span>
+                  </div>
+                  <div class="price_box">
+                    <strong>$399.50</strong>
+                    <span>$450</span>
+                  </div>
+                </div>
               </div>
-              <div class="dot">
-                <div></div>
-              </div>
-              <div class="dot">
-                <div></div>
-              </div>
-              <div class="dot">
-                <div></div>
-              </div>
-              <div class="dot">
-                <div></div>
-              </div>
-              <div class="dot">
-                <div></div>
+              <div class="product_box">
+                <a href="">
+                  <div
+                    class="product_image_box"
+                    style="
+                      background: url('public/images/products/dyson.png');
+                      background-size: cover;
+                    "
+                  >
+                    <div class="hover_box">
+                      <button>Add to Cart</button>
+                    </div>
+                  </div>
+                </a>
+                <div class="product_content_box">
+                  <span class="product_title">DYSON</span>
+                  <a href="">
+                    <p class="product_desc">
+                      Dyson V7 Complete Cordless Stick Vacuum - Iron/Blue
+                    </p>
+                  </a>
+                  <div class="review_box">
+                    <img src="public/images/icons/review.svg" />
+                    <img src="public/images/icons/review.svg" />
+                    <img src="public/images/icons/review.svg" />
+                    <img src="public/images/icons/review.svg" />
+                    <img src="public/images/icons/review.svg" />
+                    <span>1,054 reviews</span>
+                  </div>
+                  <div class="price_box">
+                    <strong>$99</strong>
+                    <span>$120</span>
+                  </div>
+                </div>
               </div>
             </div>
-            <img src="public/images/icons/arrow-prev_next.svg" style="transform: scaleX(-1);">
-          </div>
-       </div>  
-    
-
-    <div class="adv_frame">
-        Members get free shipping * wwith no order minimum! *Restriction apply. Try free 30-days trial
-    </div>
-
-
-    <div class="special_products">
-      <div class="container">
-        <div class="tepasi">
-          <span>Headphones</span>
-          <a href="">
-            <div>
-              <strong>View All</strong>
+            <div class="next-prev_box" style="transform: scaleX(-1)">
+              <img src="public/images/icons/next.svg" alt="" />
             </div>
-          </a>
-        </div>
-        <div class="pasi">
-          <div class="pas_chap">
-            <div class="chap_desc">
-              <span>Now in Moon Gray</span>
-                <b>Beats</b>
-                  <b>Studio Buts</b>
-                    <a>
-                      <strong>Shop Now</strong>
-                     </a>
-            </div>  
           </div>
-          <div class="pas_ong"></div>
+          <div class="pegination_box">
+            <div class="pegination_main">
+              <img src="public/images/icons/arrow-prev_next.svg" />
+              <div class="pegination_dot">
+                <div class="dot">
+                  <div></div>
+                </div>
+                <div class="dot active">
+                  <div></div>
+                </div>
+                <div class="dot">
+                  <div></div>
+                </div>
+                <div class="dot">
+                  <div></div>
+                </div>
+                <div class="dot">
+                  <div></div>
+                </div>
+                <div class="dot">
+                  <div></div>
+                </div>
+              </div>
+              <img
+                src="public/images/icons/arrow-prev_next.svg"
+                style="transform: scaleX(-1)"
+              />
+            </div>
+          </div>
         </div>
       </div>
-    </div>
-
+      <div class="adv_frame">
+        Members get free shipping with no order minimum! *Restrictions apply.
+        Try free 30-days trial
+      </div>
     </div>
   </body>
 </html>
