--- a/index.html
+++ b/index.html
@@ -645,6 +645,44 @@
           </div>
         </div>
       </div>
+      <div class="event_frame">
+        <div class="container">
+          <div class="event_content_box">
+            <span class="event_title">Top Deals of the Day</span>
+            <div class="timer_wrapper">
+              <div class="timer_box">
+                <strong>178</strong>
+                <span>Days</span>
+              </div>
+              <div class="timer_box">
+                <strong>23</strong>
+                <span>Hours</span>
+              </div>
+              <div class="timer_box">
+                <strong>14</strong>
+                <span>Minutes</span>
+              </div>
+              <div class="timer_box">
+                <strong>39</strong>
+                <span>Seconds</span>
+              </div>
+            </div>
+            <a href="">Shop Now</a>
+          </div>
+          <div class="event_product_wrapper">
+            <div class="next_prev_box">
+              <img src="public/images/icons/next.svg" alt="" />
+            </div>
+            <div class="next_prev_box">
+              <img
+                src="public/images/icons/next.svg"
+                style="transform: scaleX(-1)"
+                alt=""
+              />
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
