feat: completed event section view

--- a/index.html
+++ b/index.html
@@ -673,6 +673,108 @@
             <div class="next_prev_box">
               <img src="public/images/icons/next.svg" alt="" />
             </div>
+            <div class="event_product_boxes">
+              <div class="event_product_box">
+                <div class="event_product_img">
+                  <img src="public/images/products/sony_notebook.png" alt="" />
+                </div>
+                <div class="product_content_box">
+                  <span class="product_title">SONY</span>
+                  <a href="">
+                    <p class="product_desc">
+                      Sony Chromebook 4+ 15.6" Intel® Celeron®
+                    </p>
+                  </a>
+                  <div class="review_box">
+                    <img src="public/images/icons/review.svg" />
+                    <img src="public/images/icons/review.svg" />
+                    <img src="public/images/icons/review.svg" />
+                    <img src="public/images/icons/review.svg" />
+                    <img src="public/images/icons/review.svg" />
+                    <span>3,00 reviews</span>
+                  </div>
+                  <div class="price_box">
+                    <strong>$399.50</strong>
+                    <span>$450</span>
+                  </div>
+                </div>
+              </div>
+              <div class="event_product_box">
+                <div class="event_product_img">
+                  <img src="public/images/products/sony_playstation.png" alt="" />
+                </div>
+                <div class="product_content_box" style="padding: 0 0 0 20px">
+                  <span class="product_title">SAMSUNNG</span>
+                  <a href="">
+                    <p class="product_desc">
+                      Samsung 58" 4K UHD HDR LED Tizen Smart TV
+                    </p>
+                  </a>
+                  <div class="review_box">
+                    <img src="public/images/icons/review.svg" />
+                    <img src="public/images/icons/review.svg" />
+                    <img src="public/images/icons/review.svg" />
+                    <img src="public/images/icons/review.svg" />
+                    <img src="public/images/icons/review.svg" />
+                    <span>3,00 reviews</span>
+                  </div>
+                  <div class="price_box">
+                    <strong>$399.50</strong>
+                    <span>$450</span>
+                  </div>
+                </div>
+              </div>
+              <div class="event_product_box">
+                <div class="event_product_img">
+                  <img src="public/images/products/apple_watch.png" alt="" />
+                </div>
+                <div class="product_content_box">
+                  <span class="product_title">SONY</span>
+                  <a href="">
+                    <p class="product_desc">
+                      Samsung 58" 4K UHD HDR LED Tizen Smart TV
+                    </p>
+                  </a>
+                  <div class="review_box">
+                    <img src="public/images/icons/review.svg" />
+                    <img src="public/images/icons/review.svg" />
+                    <img src="public/images/icons/review.svg" />
+                    <img src="public/images/icons/review.svg" />
+                    <img src="public/images/icons/review.svg" />
+                    <span>3,00 reviews</span>
+                  </div>
+                  <div class="price_box">
+                    <strong>$399.50</strong>
+                    <span>$450</span>
+                  </div>
+                </div>
+              </div>
+              <div class="event_product_box">
+                <div class="event_product_img">
+                  <img src="public/images/products/canon_camera.png" alt="" />
+                </div>
+                <div class="product_content_box">
+                  <span class="product_title">SONY</span>
+                  <a href="">
+                    <p class="product_desc">
+                      Samsung 58" 4K UHD HDR LED Tizen Smart TV
+                    </p>
+                  </a>
+                  <div class="review_box">
+                    <img src="public/images/icons/review.svg" />
+                    <img src="public/images/icons/review.svg" />
+                    <img src="public/images/icons/review.svg" />
+                    <img src="public/images/icons/review.svg" />
+                    <img src="public/images/icons/review.svg" />
+                    <span>3,00 reviews</span>
+                  </div>
+                  <div class="price_box">
+                    <strong>$399.50</strong>
+                    <span>$450</span>
+                  </div>
+                </div>
+              </div>
+            </div>
             <div class="next_prev_box">
               <img
                 src="public/images/icons/next.svg"
