--- a/index.html
+++ b/index.html
@@ -676,7 +676,12 @@
             <div class="event_product_boxes">
               <div class="event_product_box">
                 <div class="event_product_img">
-                  <img src="public/images/products/sony_notebook.png" alt="" />
+                  <a href="">
+                    <img
+                      src="public/images/products/sony_notebook.png"
+                      alt=""
+                    />
+                  </a>
                 </div>
                 <div class="product_content_box">
                   <span class="product_title">SONY</span>
@@ -701,7 +706,12 @@
               </div>
               <div class="event_product_box">
                 <div class="event_product_img">
-                  <img src="public/images/products/sony_playstation.png" alt="" />
+                  <a href="">
+                    <img
+                      src="public/images/products/sony_playstation.png"
+                      alt=""
+                    />
+                  </a>
                 </div>
                 <div class="product_content_box" style="padding: 0 0 0 20px">
                   <span class="product_title">SAMSUNNG</span>
@@ -726,7 +736,9 @@
               </div>
               <div class="event_product_box">
                 <div class="event_product_img">
-                  <img src="public/images/products/apple_watch.png" alt="" />
+                  <a href="">
+                    <img src="public/images/products/apple_watch.png" alt="" />
+                  </a>
                 </div>
                 <div class="product_content_box">
                   <span class="product_title">SONY</span>
@@ -751,7 +763,9 @@
               </div>
               <div class="event_product_box">
                 <div class="event_product_img">
-                  <img src="public/images/products/canon_camera.png" alt="" />
+                  <a href="">
+                    <img src="public/images/products/canon_camera.png" alt="" />
+                  </a>
                 </div>
                 <div class="product_content_box">
                   <span class="product_title">SONY</span>
