--- a/index.html
+++ b/index.html
@@ -42,31 +42,37 @@
             </div>
           </div>
           <div class="nav_top_menu">
-            <a href="./order/card.html">
+            <a href="../order/card.html">
               <div class="top_menu_box">
-                <img src="public/images/icons/heart.svg" />
+                <div class="box_icon_box">
+                  <img src="../public/images/icons/heart.svg" alt="" />
+                </div>
                 <div class="box_info_box">
                   <span>Wishlist</span>
                   <strong>My Items</strong>
                 </div>
               </div>
             </a>
-            <a href="./other/login.html">
+            <a href="../other/login.html">
               <div class="top_menu_box">
-                <img src="public/images/icons/profile.svg" />
+                <div class="box_icon_box">
+                  <img src="../public/images/icons/profile.svg" alt="" />
+                </div>
                 <div class="box_info_box">
                   <span>Sign In</span>
                   <strong>Account</strong>
                 </div>
               </div>
             </a>
-            <a href="./order/card.html">
+            <a href="../order/card.html">
               <div class="top_menu_box">
-                <div class="basket_count">2</div>
-                <img src="public/images/icons/shopping-cart.svg" />
+                <div class="box_icon_box">
+                  <div class="basket_count">2</div>
+                  <img src="../public/images/icons/shopping-cart.svg" alt="" />
+                </div>
                 <div class="box_info_box">
-                  <span>$200.99</span>
-                  <strong>Total</strong>
+                  <span>Wishlist</span>
+                  <strong>My Items</strong>
                 </div>
               </div>
             </a>
@@ -79,36 +85,21 @@
               <span>Browse Categories</span>
             </div>
             <div class="navbar_route_menu">
-              <a
-                href="./mypage/index.html"
-                class="router_menu active"
-                style="color: white"
-                >Home</a
-              >
-              <a
-                href="./product/all.html"
-                class="router_menu"
-                style="color: white"
-                >Shop</a
-              >
-              <a
-                href="./order/card.html"
-                class="router_menu"
-                style="color: white"
-                >Orders</a
-              >
-              <a
-                href="./other/about.html"
-                class="router_menu"
-                style="color: white"
-                >About</a
-              >
-              <a
-                href="./other/contact.html"
-                class="router_menu"
-                style="color: white"
-                >Contact</a
-              >
+              <div class="router_menu">
+                <a href="/index.html" class="active">Home</a>
+              </div>
+              <div class="router_menu">
+                <a href="./all.html" >Shop</a>
+              </div>
+              <div class="router_menu">
+                <a href="../order/card.html">Orders</a>
+              </div>
+              <div class="router_menu">
+                <a href="../other/about.html">About</a>
+              </div>
+              <div class="router_menu">
+                <a href="../other/contact.html">Contact</a>
+              </div>
             </div>
             <div class="sorting_menu">
               <span>Deal of the Day</span>
