feat: completed untill laptops and accessories frame

--- a/product/all.html
+++ b/product/all.html
@@ -157,6 +157,348 @@
                 <button>Shop Now</button>
               </a>
             </div>
+            <div class="pegination_box">
+              <div class="pegination_main">
+                <img src="../public/images/icons/arrow-prev_next.svg" />
+                <div class="pegination_dot">
+                  <div class="dot">
+                    <div></div>
+                  </div>
+                  <div class="dot active">
+                    <div></div>
+                  </div>
+                  <div class="dot">
+                    <div></div>
+                  </div>
+                  <div class="dot">
+                    <div></div>
+                  </div>
+                  <div class="dot">
+                    <div></div>
+                  </div>
+                  <div class="dot">
+                    <div></div>
+                  </div>
+                </div>
+                <img
+                  src="../public/images/icons/arrow-prev_next.svg"
+                  style="transform: scaleX(-1)"
+                />
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="shop_category_box">
+          <div class="shop_category_box_top">
+            <strong>Shop by Category</strong>
+            <span> <span class="view">View</span> all Categories</span>
+          </div>
+          <div class="category_wrapper">
+            <div class="category_box">
+              <div class="category_img_box">
+                <img src="../public/images/category/tv.png" />
+              </div>
+              <span>TVs, Home Theatre and Accessories</span>
+            </div>
+            <div class="category_box">
+              <div class="category_img_box">
+                <img src="../public/images/category/computer.png" />
+              </div>
+              <span>Computers, Tablets, and Accessories</span>
+            </div>
+            <div class="category_box">
+              <div class="category_img_box">
+                <img src="../public/images/category/smart.png" />
+              </div>
+              <span>Smart Home</span>
+            </div>
+            <div class="category_box">
+              <div class="category_img_box">
+                <img src="../public/images/category/headphone.png" />
+              </div>
+              <span>Headphones and Portable Speakers</span>
+            </div>
+            <div class="category_box">
+              <div class="category_img_box">
+                <img src="../public/images/category/phone.png" />
+              </div>
+              <span>Cell Phones and Accessories</span>
+            </div>
+            <div class="category_box">
+              <div class="category_img_box">
+                <img src="../public/images/category/game.png" />
+              </div>
+              <span>Video Games, Consoles and Accessories</span>
+            </div>
+          </div>
+        </div>
+        <div class="shop_by_brend_box">
+          <div class="container">
+            <div class="brand_box_wrapper">
+              <div class="container_top">
+                <span>Shop by brand</span>
+              </div>
+              <div class="container_bottom">
+                <a href="">Apple</a>
+                <a href="">Dell</a>
+                <a href="">HP</a>
+                <a href="">Lenovo</a>
+                <a href="">Samsung</a>
+                <a href="">Asus</a>
+                <a href="">Aser</a>
+                <a href="">Sony</a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="shop_by_brand_frame">
+          <div class="container">
+            <div class="category_top">
+              <span>Top Selling Products</span>
+              <div>
+                <div class="pegination_box">
+                  <div class="pegination_main">
+                    <img src="../public/images/icons/arrow-prev_next.svg" />
+                    <div class="pegination_dot">
+                      <div class="dot">
+                        <div></div>
+                      </div>
+                      <div class="dot active">
+                        <div></div>
+                      </div>
+                      <div class="dot">
+                        <div></div>
+                      </div>
+                      <div class="dot">
+                        <div></div>
+                      </div>
+                      <div class="dot">
+                        <div></div>
+                      </div>
+                      <div class="dot">
+                        <div></div>
+                      </div>
+                    </div>
+                    <img
+                      src="../public/images/icons/arrow-prev_next.svg"
+                      style="transform: scaleX(-1)"
+                    />
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="tv_wrapper">
+              <div class="tv_product_boxes">
+                <div class="tv_product_box">
+                  <div class="product_img">
+                    <a href="../product/choosenProduct.html">
+                      <img
+                        src="../public/images/products/samsung_tv.png"
+                        alt=""
+                      />
+                    </a>
+                  </div>
+                  <div class="product_content_box">
+                    <span class="product_title">SONY</span>
+                    <a href="">
+                      <p class="product_desc">
+                        Samsung 58" 4K UHD HDR LED Tizen Smart TV
+                      </p>
+                    </a>
+                    <div class="review_box">
+                      <img src="../public/images/icons/review.svg" />
+                      <img src="../public/images/icons/review.svg" />
+                      <img src="../public/images/icons/review.svg" />
+                      <img src="../public/images/icons/review.svg" />
+                      <img src="../public/images/icons/review.svg" />
+                      <span>3,00 reviews</span>
+                    </div>
+                    <div class="price_box">
+                      <strong>$399.50</strong>
+                      <span>$450</span>
+                    </div>
+                  </div>
+                </div>
+                <div class="tv_product_box">
+                  <div class="product_img">
+                    <a href="../product/choosenProduct.html">
+                      <img
+                        src="../public/images/products/samsung_tv.png"
+                        alt=""
+                      />
+                    </a>
+                  </div>
+                  <div class="product_content_box">
+                    <span class="product_title">SONY</span>
+                    <a href="">
+                      <p class="product_desc">
+                        Samsung 58" 4K UHD HDR LED Tizen Smart TV
+                      </p>
+                    </a>
+                    <div class="review_box">
+                      <img src="../public/images/icons/review.svg" />
+                      <img src="../public/images/icons/review.svg" />
+                      <img src="../public/images/icons/review.svg" />
+                      <img src="../public/images/icons/review.svg" />
+                      <img src="../public/images/icons/review.svg" />
+                      <span>3,00 reviews</span>
+                    </div>
+                    <div class="price_box">
+                      <strong>$399.50</strong>
+                      <span>$450</span>
+                    </div>
+                  </div>
+                </div>
+                <div class="tv_product_box">
+                  <div class="product_img">
+                    <a href="../product/choosenProduct.html">
+                      <img
+                        src="../public/images/products/samsung_tv.png"
+                        alt=""
+                      />
+                    </a>
+                  </div>
+                  <div class="product_content_box">
+                    <span class="product_title">SONY</span>
+                    <a href="">
+                      <p class="product_desc">
+                        Samsung 58" 4K UHD HDR LED Tizen Smart TV
+                      </p>
+                    </a>
+                    <div class="review_box">
+                      <img src="../public/images/icons/review.svg" />
+                      <img src="../public/images/icons/review.svg" />
+                      <img src="../public/images/icons/review.svg" />
+                      <img src="../public/images/icons/review.svg" />
+                      <img src="../public/images/icons/review.svg" />
+                      <span>3,00 reviews</span>
+                    </div>
+                    <div class="price_box">
+                      <strong>$399.50</strong>
+                      <span>$450</span>
+                    </div>
+                  </div>
+                </div>
+                <div class="tv_product_box">
+                  <div class="product_img">
+                    <a href="../product/choosenProduct.html">
+                      <img
+                        src="../public/images/products/samsung_tv.png"
+                        alt=""
+                      />
+                    </a>
+                  </div>
+                  <div class="product_content_box">
+                    <span class="product_title">SONY</span>
+                    <a href="">
+                      <p class="product_desc">
+                        Samsung 58" 4K UHD HDR LED Tizen Smart TV
+                      </p>
+                    </a>
+                    <div class="review_box">
+                      <img src="../public/images/icons/review.svg" />
+                      <img src="../public/images/icons/review.svg" />
+                      <img src="../public/images/icons/review.svg" />
+                      <img src="../public/images/icons/review.svg" />
+                      <img src="../public/images/icons/review.svg" />
+                      <span>3,00 reviews</span>
+                    </div>
+                    <div class="price_box">
+                      <strong>$399.50</strong>
+                      <span>$450</span>
+                    </div>
+                  </div>
+                </div>
+                <div class="tv_product_box">
+                  <div class="product_img">
+                    <a href="../product/choosenProduct.html">
+                      <img
+                        src="../public/images/products/samsung_tv.png"
+                        alt=""
+                      />
+                    </a>
+                  </div>
+                  <div class="product_content_box">
+                    <span class="product_title">SONY</span>
+                    <a href="">
+                      <p class="product_desc">
+                        Samsung 58" 4K UHD HDR LED Tizen Smart TV
+                      </p>
+                    </a>
+                    <div class="review_box">
+                      <img src="../public/images/icons/review.svg" />
+                      <img src="../public/images/icons/review.svg" />
+                      <img src="../public/images/icons/review.svg" />
+                      <img src="../public/images/icons/review.svg" />
+                      <img src="../public/images/icons/review.svg" />
+                      <span>3,00 reviews</span>
+                    </div>
+                    <div class="price_box">
+                      <strong>$399.50</strong>
+                      <span>$450</span>
+                    </div>
+                  </div>
+                </div>
+                <div class="tv_product_box">
+                  <div class="product_img">
+                    <a href="../product/choosenProduct.html">
+                      <img
+                        src="../public/images/products/samsung_tv.png"
+                        alt=""
+                      />
+                    </a>
+                  </div>
+                  <div class="product_content_box">
+                    <span class="product_title">SONY</span>
+                    <a href="">
+                      <p class="product_desc">
+                        Samsung 58" 4K UHD HDR LED Tizen Smart TV
+                      </p>
+                    </a>
+                    <div class="review_box">
+                      <img src="../public/images/icons/review.svg" />
+                      <img src="../public/images/icons/review.svg" />
+                      <img src="../public/images/icons/review.svg" />
+                      <img src="../public/images/icons/review.svg" />
+                      <img src="../public/images/icons/review.svg" />
+                      <span>3,00 reviews</span>
+                    </div>
+                    <div class="price_box">
+                      <strong>$399.50</strong>
+                      <span>$450</span>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="laptops_accessories">
+          <div class="container">
+            <strong>Laptops and Accessories</strong>
+            <span
+              >Shop laptops, desktops, monitors, tablets, PC gaming, hard drives
+              and storage, accessories and more</span
+            >
+          </div>
+        </div>
+        <div class="product_type_box">
+          <div class="container">
+            <div class="select_box">
+              <select name="" id="">
+                <option value="">Price</option>
+              </select>
+            </div>
+            <div class="select_box">
+              <select name="" id="">
+                <option value="">Brand</option>
+              </select>
+            </div>
+            <div class="select_box">
+              <select name="" id="">
+                <option value="">Color</option>
+              </select>
+            </div>
           </div>
         </div>
       </div>
