feat:completed all product section view

--- a/product/all.html
+++ b/product/all.html
@@ -501,6 +501,389 @@
             </div>
           </div>
         </div>
+        <div class="laptops_box">
+          <div class="container">
+            <div class="laptop_wrapper">
+              <div class="laptop_box_img">
+                <img src="../public/images/products/acer_laptop.png" alt="" />
+              </div>
+              <div class="laptop_box_info">
+                <span>Lenovo</span>
+                <strong
+                  >Lenovo IdeaPad 3 15.6" Laptop - Sand (Intel Core
+                  i7-1165G7/512GB SSD/12GB RAM/Windows 11)</strong
+                >
+              </div>
+              <div class="laptop_review_box">
+                <img src="../public/images/icons/review.svg" alt="" />
+                <img src="../public/images/icons/review.svg" alt="" />
+                <img src="../public/images/icons/review.svg" alt="" />
+                <img src="../public/images/icons/review.svg" alt="" />
+                <img src="../public/images/icons/review.svg" alt="" />
+                <span>3000 reviews</span>
+              </div>
+              <div class="laptop_price_box">
+                <strong>899.9$</strong>
+                <span>1000$</span>
+              </div>
+            </div>
+            <div class="laptop_wrapper">
+              <div class="laptop_box_img">
+                <img src="../public/images/products/acer_laptop.png" alt="" />
+              </div>
+              <div class="laptop_box_info">
+                <span>Lenovo</span>
+                <strong
+                  >Lenovo IdeaPad 3 15.6" Laptop - Sand (Intel Core
+                  i7-1165G7/512GB SSD/12GB RAM/Windows 11)</strong
+                >
+              </div>
+              <div class="laptop_review_box">
+                <img src="../public/images/icons/review.svg" alt="" />
+                <img src="../public/images/icons/review.svg" alt="" />
+                <img src="../public/images/icons/review.svg" alt="" />
+                <img src="../public/images/icons/review.svg" alt="" />
+                <img src="../public/images/icons/review.svg" alt="" />
+                <span>3000 reviews</span>
+              </div>
+              <div class="laptop_price_box">
+                <strong>899.9$</strong>
+                <span>1000$</span>
+              </div>
+            </div>
+            <div class="laptop_wrapper">
+              <div class="laptop_box_img">
+                <img src="../public/images/products/acer_laptop.png" alt="" />
+              </div>
+              <div class="laptop_box_info">
+                <span>Lenovo</span>
+                <strong
+                  >Lenovo IdeaPad 3 15.6" Laptop - Sand (Intel Core
+                  i7-1165G7/512GB SSD/12GB RAM/Windows 11)</strong
+                >
+              </div>
+              <div class="laptop_review_box">
+                <img src="../public/images/icons/review.svg" alt="" />
+                <img src="../public/images/icons/review.svg" alt="" />
+                <img src="../public/images/icons/review.svg" alt="" />
+                <img src="../public/images/icons/review.svg" alt="" />
+                <img src="../public/images/icons/review.svg" alt="" />
+                <span>3000 reviews</span>
+              </div>
+              <div class="laptop_price_box">
+                <strong>899.9$</strong>
+                <span>1000$</span>
+              </div>
+            </div>
+            <div class="laptop_wrapper">
+              <div class="laptop_box_img">
+                <img src="../public/images/products/acer_laptop.png" alt="" />
+              </div>
+              <div class="laptop_box_info">
+                <span>Lenovo</span>
+                <strong
+                  >Lenovo IdeaPad 3 15.6" Laptop - Sand (Intel Core
+                  i7-1165G7/512GB SSD/12GB RAM/Windows 11)</strong
+                >
+              </div>
+              <div class="laptop_review_box">
+                <img src="../public/images/icons/review.svg" alt="" />
+                <img src="../public/images/icons/review.svg" alt="" />
+                <img src="../public/images/icons/review.svg" alt="" />
+                <img src="../public/images/icons/review.svg" alt="" />
+                <img src="../public/images/icons/review.svg" alt="" />
+                <span>3000 reviews</span>
+              </div>
+              <div class="laptop_price_box">
+                <strong>899.9$</strong>
+                <span>1000$</span>
+              </div>
+            </div>
+            <div class="laptop_wrapper">
+              <div class="laptop_box_img">
+                <img src="../public/images/products/acer_laptop.png" alt="" />
+              </div>
+              <div class="laptop_box_info">
+                <span>Lenovo</span>
+                <strong
+                  >Lenovo IdeaPad 3 15.6" Laptop - Sand (Intel Core
+                  i7-1165G7/512GB SSD/12GB RAM/Windows 11)</strong
+                >
+              </div>
+              <div class="laptop_review_box">
+                <img src="../public/images/icons/review.svg" alt="" />
+                <img src="../public/images/icons/review.svg" alt="" />
+                <img src="../public/images/icons/review.svg" alt="" />
+                <img src="../public/images/icons/review.svg" alt="" />
+                <img src="../public/images/icons/review.svg" alt="" />
+                <span>3000 reviews</span>
+              </div>
+              <div class="laptop_price_box">
+                <strong>899.9$</strong>
+                <span>1000$</span>
+              </div>
+            </div>
+            <div class="laptop_wrapper">
+              <div class="laptop_box_img">
+                <img src="../public/images/products/acer_laptop.png" alt="" />
+              </div>
+              <div class="laptop_box_info">
+                <span>Lenovo</span>
+                <strong
+                  >Lenovo IdeaPad 3 15.6" Laptop - Sand (Intel Core
+                  i7-1165G7/512GB SSD/12GB RAM/Windows 11)</strong
+                >
+              </div>
+              <div class="laptop_review_box">
+                <img src="../public/images/icons/review.svg" alt="" />
+                <img src="../public/images/icons/review.svg" alt="" />
+                <img src="../public/images/icons/review.svg" alt="" />
+                <img src="../public/images/icons/review.svg" alt="" />
+                <img src="../public/images/icons/review.svg" alt="" />
+                <span>3000 reviews</span>
+              </div>
+              <div class="laptop_price_box">
+                <strong>899.9$</strong>
+                <span>1000$</span>
+              </div>
+            </div>
+            <div class="laptop_wrapper">
+              <div class="laptop_box_img">
+                <img src="../public/images/products/acer_laptop.png" alt="" />
+              </div>
+              <div class="laptop_box_info">
+                <span>Lenovo</span>
+                <strong
+                  >Lenovo IdeaPad 3 15.6" Laptop - Sand (Intel Core
+                  i7-1165G7/512GB SSD/12GB RAM/Windows 11)</strong
+                >
+              </div>
+              <div class="laptop_review_box">
+                <img src="../public/images/icons/review.svg" alt="" />
+                <img src="../public/images/icons/review.svg" alt="" />
+                <img src="../public/images/icons/review.svg" alt="" />
+                <img src="../public/images/icons/review.svg" alt="" />
+                <img src="../public/images/icons/review.svg" alt="" />
+                <span>3000 reviews</span>
+              </div>
+              <div class="laptop_price_box">
+                <strong>899.9$</strong>
+                <span>1000$</span>
+              </div>
+            </div>
+            <div class="laptop_wrapper">
+              <div class="laptop_box_img">
+                <img src="../public/images/products/acer_laptop.png" alt="" />
+              </div>
+              <div class="laptop_box_info">
+                <span>Lenovo</span>
+                <strong
+                  >Lenovo IdeaPad 3 15.6" Laptop - Sand (Intel Core
+                  i7-1165G7/512GB SSD/12GB RAM/Windows 11)</strong
+                >
+              </div>
+              <div class="laptop_review_box">
+                <img src="../public/images/icons/review.svg" alt="" />
+                <img src="../public/images/icons/review.svg" alt="" />
+                <img src="../public/images/icons/review.svg" alt="" />
+                <img src="../public/images/icons/review.svg" alt="" />
+                <img src="../public/images/icons/review.svg" alt="" />
+                <span>3000 reviews</span>
+              </div>
+              <div class="laptop_price_box">
+                <strong>899.9$</strong>
+                <span>1000$</span>
+              </div>
+            </div>
+            <div class="laptop_wrapper">
+              <div class="laptop_box_img">
+                <img src="../public/images/products/acer_laptop.png" alt="" />
+              </div>
+              <div class="laptop_box_info">
+                <span>Lenovo</span>
+                <strong
+                  >Lenovo IdeaPad 3 15.6" Laptop - Sand (Intel Core
+                  i7-1165G7/512GB SSD/12GB RAM/Windows 11)</strong
+                >
+              </div>
+              <div class="laptop_review_box">
+                <img src="../public/images/icons/review.svg" alt="" />
+                <img src="../public/images/icons/review.svg" alt="" />
+                <img src="../public/images/icons/review.svg" alt="" />
+                <img src="../public/images/icons/review.svg" alt="" />
+                <img src="../public/images/icons/review.svg" alt="" />
+                <span>3000 reviews</span>
+              </div>
+              <div class="laptop_price_box">
+                <strong>899.9$</strong>
+                <span>1000$</span>
+              </div>
+            </div>
+            <div class="laptop_wrapper">
+              <div class="laptop_box_img">
+                <img src="../public/images/products/acer_laptop.png" alt="" />
+              </div>
+              <div class="laptop_box_info">
+                <span>Lenovo</span>
+                <strong
+                  >Lenovo IdeaPad 3 15.6" Laptop - Sand (Intel Core
+                  i7-1165G7/512GB SSD/12GB RAM/Windows 11)</strong
+                >
+              </div>
+              <div class="laptop_review_box">
+                <img src="../public/images/icons/review.svg" alt="" />
+                <img src="../public/images/icons/review.svg" alt="" />
+                <img src="../public/images/icons/review.svg" alt="" />
+                <img src="../public/images/icons/review.svg" alt="" />
+                <img src="../public/images/icons/review.svg" alt="" />
+                <span>3000 reviews</span>
+              </div>
+              <div class="laptop_price_box">
+                <strong>899.9$</strong>
+                <span>1000$</span>
+              </div>
+            </div>
+            <div class="laptop_wrapper">
+              <div class="laptop_box_img">
+                <img src="../public/images/products/acer_laptop.png" alt="" />
+              </div>
+              <div class="laptop_box_info">
+                <span>Lenovo</span>
+                <strong
+                  >Lenovo IdeaPad 3 15.6" Laptop - Sand (Intel Core
+                  i7-1165G7/512GB SSD/12GB RAM/Windows 11)</strong
+                >
+              </div>
+              <div class="laptop_review_box">
+                <img src="../public/images/icons/review.svg" alt="" />
+                <img src="../public/images/icons/review.svg" alt="" />
+                <img src="../public/images/icons/review.svg" alt="" />
+                <img src="../public/images/icons/review.svg" alt="" />
+                <img src="../public/images/icons/review.svg" alt="" />
+                <span>3000 reviews</span>
+              </div>
+              <div class="laptop_price_box">
+                <strong>899.9$</strong>
+                <span>1000$</span>
+              </div>
+            </div>
+            <div class="laptop_wrapper">
+              <div class="laptop_box_img">
+                <img src="../public/images/products/acer_laptop.png" alt="" />
+              </div>
+              <div class="laptop_box_info">
+                <span>Lenovo</span>
+                <strong
+                  >Lenovo IdeaPad 3 15.6" Laptop - Sand (Intel Core
+                  i7-1165G7/512GB SSD/12GB RAM/Windows 11)</strong
+                >
+              </div>
+              <div class="laptop_review_box">
+                <img src="../public/images/icons/review.svg" alt="" />
+                <img src="../public/images/icons/review.svg" alt="" />
+                <img src="../public/images/icons/review.svg" alt="" />
+                <img src="../public/images/icons/review.svg" alt="" />
+                <img src="../public/images/icons/review.svg" alt="" />
+                <span>3000 reviews</span>
+              </div>
+              <div class="laptop_price_box">
+                <strong>899.9$</strong>
+                <span>1000$</span>
+              </div>
+            </div>
+            <div class="laptop_wrapper">
+              <div class="laptop_box_img">
+                <img src="../public/images/products/acer_laptop.png" alt="" />
+              </div>
+              <div class="laptop_box_info">
+                <span>Lenovo</span>
+                <strong
+                  >Lenovo IdeaPad 3 15.6" Laptop - Sand (Intel Core
+                  i7-1165G7/512GB SSD/12GB RAM/Windows 11)</strong
+                >
+              </div>
+              <div class="laptop_review_box">
+                <img src="../public/images/icons/review.svg" alt="" />
+                <img src="../public/images/icons/review.svg" alt="" />
+                <img src="../public/images/icons/review.svg" alt="" />
+                <img src="../public/images/icons/review.svg" alt="" />
+                <img src="../public/images/icons/review.svg" alt="" />
+                <span>3000 reviews</span>
+              </div>
+              <div class="laptop_price_box">
+                <strong>899.9$</strong>
+                <span>1000$</span>
+              </div>
+            </div>
+            <div class="laptop_wrapper">
+              <div class="laptop_box_img">
+                <img src="../public/images/products/acer_laptop.png" alt="" />
+              </div>
+              <div class="laptop_box_info">
+                <span>Lenovo</span>
+                <strong
+                  >Lenovo IdeaPad 3 15.6" Laptop - Sand (Intel Core
+                  i7-1165G7/512GB SSD/12GB RAM/Windows 11)</strong
+                >
+              </div>
+              <div class="laptop_review_box">
+                <img src="../public/images/icons/review.svg" alt="" />
+                <img src="../public/images/icons/review.svg" alt="" />
+                <img src="../public/images/icons/review.svg" alt="" />
+                <img src="../public/images/icons/review.svg" alt="" />
+                <img src="../public/images/icons/review.svg" alt="" />
+                <span>3000 reviews</span>
+              </div>
+              <div class="laptop_price_box">
+                <strong>899.9$</strong>
+                <span>1000$</span>
+              </div>
+            </div>
+            <div class="laptop_wrapper">
+              <div class="laptop_box_img">
+                <img src="../public/images/products/acer_laptop.png" alt="" />
+              </div>
+              <div class="laptop_box_info">
+                <span>Lenovo</span>
+                <strong
+                  >Lenovo IdeaPad 3 15.6" Laptop - Sand (Intel Core
+                  i7-1165G7/512GB SSD/12GB RAM/Windows 11)</strong
+                >
+              </div>
+              <div class="laptop_review_box">
+                <img src="../public/images/icons/review.svg" alt="" />
+                <img src="../public/images/icons/review.svg" alt="" />
+                <img src="../public/images/icons/review.svg" alt="" />
+                <img src="../public/images/icons/review.svg" alt="" />
+                <img src="../public/images/icons/review.svg" alt="" />
+                <span>3000 reviews</span>
+              </div>
+              <div class="laptop_price_box">
+                <strong>899.9$</strong>
+                <span>1000$</span>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="laptop_pegination_box">
+          <div class="container">
+            <div class="number_box">
+              <img src="../public/images/icons/next.svg" alt="" />
+              <span>1</span>
+              <span>2</span>
+              <span>3</span>
+              <span>4</span>
+              <span>5</span>
+              <span>...</span>
+              <span>20</span>
+              <img
+                src="../public/images/icons/next.svg"
+                style="transform: scaleX(-1)"
+                alt=""
+              />
+            </div>
+          </div>
+        </div>
       </div>
     </div>
     <div class="footer_frame">
